Training docs/Assignment8/Trial/src/objects/Merchan__c.object
<CustomObject>
	<fields>
		<fullName>Description__c</fullName>
		<inlineHelpText>Add a single line of description</inlineHelpText>
		<label>Description</label>
		<required>true</required>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>Price__c</fullName>
		<label>Price</label>
		<precision>18</precision>
		<required>true</required>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Total_Inventory__c</fullName>
		<label>Total Inventory</label>
		<precision>18</precision>
		<required>true</required>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<label>Merchandise</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Merchandise</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>